external-crates/move/crates/move-compiler/tests/development/signed_ints/signed_int_min_values.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_min_values.move:7:17
  │
7 │         let _x: i8 = -128i8;
  │                 ^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_min_values.move:7:22
  │
7 │         let _x: i8 = -128i8;
  │                      ^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:11:17
   │
11 │         let _x: i16 = -32768i16;
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:11:23
   │
11 │         let _x: i16 = -32768i16;
   │                       ^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:15:17
   │
15 │         let _x: i32 = -2147483648i32;
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:15:23
   │
15 │         let _x: i32 = -2147483648i32;
   │                       ^^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:19:17
   │
19 │         let _x: i64 = -9223372036854775808i64;
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:19:23
   │
19 │         let _x: i64 = -9223372036854775808i64;
   │                       ^^^^^^^^^^^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:23:17
   │
23 │         let _x: i128 = -170141183460469231731687303715884105728i128;
   │                 ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:23:24
   │
23 │         let _x: i128 = -170141183460469231731687303715884105728i128;
   │                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:28:17
   │
28 │         let _x: i8 = -127i8;
   │                 ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:28:22
   │
28 │         let _x: i8 = -127i8;
   │                      ^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:32:17
   │
32 │         let _x: i64 = -9223372036854775807i64;
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:32:23
   │
32 │         let _x: i64 = -9223372036854775807i64;
   │                       ^^^^^^^^^^^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:37:17
   │
37 │         let _x: i8 = -1i8;
   │                 ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:37:22
   │
37 │         let _x: i8 = -1i8;
   │                      ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:41:17
   │
41 │         let _x: i64 = -1i64;
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:41:23
   │
41 │         let _x: i64 = -1i64;
   │                       ^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:46:17
   │
46 │         let _x: i8 = -0i8;
   │                 ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:46:22
   │
46 │         let _x: i8 = -0i8;
   │                      ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:50:17
   │
50 │         let _x: i64 = -0i64;
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_min_values.move:50:23
   │
50 │         let _x: i64 = -0i64;
   │                       ^^^^^ Signed integer types are under development
